--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Orbitron', sans-serif;
-            background-color: #1e1e1e;
-            color: #fff;
+            font-family: 'Orbitron', sans-serif; /* Estilo gaming */
+            background-color: #1e1e1e; /* Fondo oscuro */
+            color: #fff; /* Texto claro */
             margin: 0;
             padding: 20px;
         }
@@ -17,7 +17,7 @@
         h1 {
             text-align: center;
             font-size: 2.5em;
-            color: #FF4500;
+            color: #FF4500; /* Naranja Rust */
             text-shadow: 2px 2px 4px #000;
         }
 
@@ -30,41 +30,42 @@
             width: 100%;
             padding: 10px;
             margin: 5px 0 10px;
-            border: 2px solid #FF4500;
-            border-radius: 5px;
-            background-color: #333;
+            border: 2px solid #FF4500; /* Borde de botón */
+            border-radius: 5px; /* Bordes redondeados */
+            background-color: #333; /* Fondo de campos */
             color: #fff;
+            font-size: 1em;
         }
 
         button {
-            background-color: #FF4500;
+            background-color: #FF4500; /* Naranja Rust */
             color: white;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s; /* Transición suave */
         }
 
         button:hover {
-            background-color: #E53E00;
+            background-color: #E53E00; /* Hover más oscuro */
         }
 
         #command_list, #kit_list {
             margin-top: 20px;
             padding: 10px;
-            background-color: #292929;
-            border: 2px solid #FF4500;
+            background-color: #292929; /* Cuadro oscuro */
+            border: 2px solid #FF4500; /* Borde naranja */
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7);
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7); /* Sombra */
         }
 
         .kit-item {
-            background-color: #444;
+            background-color: #444; /* Fondo de cada comando */
             padding: 10px;
             margin: 5px 0;
             border-radius: 5px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border: 1px solid #FF4500;
+            border: 1px solid #FF4500; /* Borde de comandos */
         }
 
         .kit-actions {
@@ -79,6 +80,14 @@
             margin-top: 40px;
         }
 
+        /* Estilo para los botones de sección */
+        .section-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+
         /* Estilo para la imagen del ítem */
         .item-image {
             max-width: 100px;
@@ -87,7 +96,7 @@
 
         /* Estilo para el inventario simulado */
         #inventory {
-            display: none;
+            display: flex;
             flex-direction: column;
             align-items: center;
             margin-top: 20px;
@@ -96,39 +105,34 @@
         .slots {
             display: flex;
             flex-wrap: wrap;
-            width: 400px;
+            width: 400px; /* Ajustar el ancho según sea necesario */
             margin-bottom: 10px;
         }
 
         .slot {
-            width: 50px;
-            height: 50px;
+            width: 50px; /* Ancho de cada slot */
+            height: 50px; /* Alto de cada slot */
             margin: 5px;
-            background-color: #555;
-            border: 2px solid #FF4500;
+            background-color: #555; /* Fondo de los slots */
+            border: 2px solid #FF4500; /* Borde de los slots */
             border-radius: 5px;
-            position: relative;
+            position: relative; /* Posición relativa para los elementos internos */
         }
 
         .slot img {
-            width: 100%;
-            height: auto;
+            width: 100%; /* Hacer que la imagen ocupe todo el slot */
+            height: auto; /* Mantener la relación de aspecto */
         }
 
         .quantity {
             position: absolute;
-            bottom: 2px;
-            right: 2px;
-            font-size: 0.7em;
-            color: white;
-            background-color: rgba(0, 0, 0, 0.5);
-            border-radius: 3px;
-            padding: 2px;
-        }
-
-        #hideInventoryBtn {
-            display: none;
-            margin-top: 10px;
+            bottom: 2px; /* Alinear al fondo */
+            right: 2px; /* Alinear a la derecha */
+            font-size: 0.7em; /* Tamaño de fuente más pequeño */
+            color: white; /* Color del texto */
+            background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+            border-radius: 3px; /* Bordes redondeados */
+            padding: 2px; /* Espaciado interno */
         }
     </style>
 </head>
@@ -156,6 +160,7 @@
     <label for="item_list">Select an item:</label>
     <select id="item_list" onchange="showItemDetails()">
         <option value="none">Select an item</option>
+        <!-- Aquí se añadirán dinámicamente las opciones -->
     </select>
 
     <img id="item_image" class="item-image" src="" alt="Imagen del ítem" style="display:none;" />
@@ -208,17 +213,18 @@
     <div id="kit_list"></div>
     <div id="command_list"></div>
     
-    <div id="inventory">
+    <div id="inventory" style="display:none;">
         <h3>Simulated Inventory</h3>
-        <h4>Wear</h4>
-        <div id="wear_slots" class="slots"></div>
-        <h4>Main</h4>
-        <div id="main_slots" class="slots"></div>
-        <h4>Belt</h4>
-        <div id="belt_slots" class="slots"></div>
+        <div class="slots">
+            <h4>Belt</h4>
+            <div id="belt_slots" class="slots"></div>
+            <h4>Main</h4>
+            <div id="main_slots" class="slots"></div>
+            <h4>Wear</h4>
+            <div id="wear_slots" class="slots"></div>
+        </div>
+        <button onclick="hideInventory()">Hide</button>
     </div>
-
-    <button id="hideInventoryBtn" onclick="hideInventory()">Hide</button>
 
     <script src="Items.js"></script>
     <script>
@@ -284,9 +290,10 @@
             }
         ];
 
+        // Función para mostrar/ocultar los kits de VieraGuti
         function toggleKits() {
             const kitListContainer = document.getElementById('kit_list');
-            kitListContainer.innerHTML = '';
+            kitListContainer.innerHTML = ''; // Limpiar contenido anterior
 
             predefinedKits.forEach(kit => {
                 const kitItem = document.createElement('div');
@@ -300,10 +307,11 @@
             });
         }
 
+        // Función para mostrar los detalles del kit
         function showKitDetails(kitName) {
             const kit = predefinedKits.find(k => k.name === kitName);
             const commandList = document.getElementById('kit_list');
-            commandList.innerHTML = '';
+            commandList.innerHTML = ''; // Limpiar lista existente
 
             if (kit) {
                 const kitDetails = document.createElement('div');
@@ -318,6 +326,7 @@
             }
         }
 
+        // Función para mostrar la información del kit
         function showKitInfo(kitName) {
             const kit = predefinedKits.find(k => k.name === kitName);
             const inventory = document.getElementById('inventory');
@@ -325,10 +334,15 @@
             const mainSlots = document.getElementById('main_slots');
             const beltSlots = document.getElementById('belt_slots');
 
+            // Limpiar los slots antes de mostrar
             wearSlots.innerHTML = '';
             mainSlots.innerHTML = '';
             beltSlots.innerHTML = '';
 
+            // Mostrar el inventario
+            inventory.style.display = 'block';
+
+            // Procesar los comandos para mostrar en los slots
             if (kit) {
                 kit.commands.forEach(command => {
                     const parts = command.split('"');
@@ -339,16 +353,17 @@
                     const slot = document.createElement('div');
                     slot.className = 'slot';
                     const img = document.createElement('img');
-                    img.src = `images/${itemId}.png`;
+                    img.src = `images/${itemId}.png`; // Cambiar a la ruta correcta
                     img.alt = itemId;
 
                     const quantityLabel = document.createElement('div');
                     quantityLabel.className = 'quantity';
-                    quantityLabel.innerText = `x${quantity}`;
+                    quantityLabel.innerText = `x${quantity}`; // Mostrar cantidad
 
                     slot.appendChild(img);
                     slot.appendChild(quantityLabel);
 
+                    // Asignar slots según la ubicación
                     if (location === 'Wear') {
                         wearSlots.appendChild(slot);
                     } else if (location === 'Main') {
@@ -358,18 +373,20 @@
                     }
                 });
             }
-
-            inventory.style.display = 'block';
-            document.getElementById('hideInventoryBtn').style.display = 'block';
         }
 
+        // Función para ocultar el inventario
         function hideInventory() {
             const inventory = document.getElementById('inventory');
-            const hideBtn = document.getElementById('hideInventoryBtn');
             inventory.style.display = 'none';
-            hideBtn.style.display = 'none';
         }
 
+        // Función para ocultar la lista
+        function toggleKitList() {
+            toggleKits(); // Mostrar solo la lista de nombres
+        }
+
+        // Función para copiar el comando
         function copyKits(kitName) {
             const kit = predefinedKits.find(k => k.name === kitName);
             if (kit) {
@@ -379,7 +396,7 @@
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('\n'));
+                alert('Commands copied: ' + kit.commands.join('\n')); // Mensaje de confirmación
             }
         }
 
@@ -393,9 +410,9 @@
             if (selectedItem) {
                 const imageUrl = `images/${selectedItem.id}.png`;
                 itemImage.src = imageUrl;
-                itemImage.style.display = 'block';
+                itemImage.style.display = 'block'; // Mostrar la imagen
             } else {
-                itemImage.style.display = 'none';
+                itemImage.style.display = 'none'; // Ocultar si no hay imagen
             }
         }
 
@@ -424,13 +441,14 @@
 
             localStorage.setItem('commands', JSON.stringify(commands));
             displayCommands();
-            document.getElementById('item_list').value = 'none';
-            showItemDetails();
+            document.getElementById('item_list').value = 'none'; // Reiniciar la selección de ítems
+            showItemDetails(); // Limpiar detalles de ítem
+            updateInventory(); // Actualizar inventario en tiempo real
         }
 
         function displayCommands() {
-            const commandList = document.getElementById('command_list');
-            commandList.innerHTML = '';
+            const commandList = document.getElementById('command_list'); // Cambiado para mostrar en command_list
+            commandList.innerHTML = ''; // Limpiar lista existente
 
             commands.forEach((kit) => {
                 const kitItem = document.createElement('div');
@@ -451,6 +469,7 @@
             });
         }
 
+        // Nueva función para copiar todos los comandos de un kit
         function copyCommands(kitName) {
             const kit = commands.find(k => k.name === kitName);
             if (kit) {
@@ -460,7 +479,7 @@
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('\n'));
+                alert('Commands copied: ' + kit.commands.join('\n')); // Espacios en el mensaje de alerta
             }
         }
 
@@ -472,6 +491,7 @@
                     kit.commands = newCommands.split('\n');
                     localStorage.setItem('commands', JSON.stringify(commands));
                     displayCommands();
+                    updateInventory(); // Actualizar el inventario después de editar
                 }
             }
         }
@@ -480,9 +500,10 @@
             if (confirm(`You are going to delete the entire list from "${kitName}". You're sure?`)) {
                 const kitIndex = commands.findIndex(k => k.name === kitName);
                 if (kitIndex !== -1) {
-                    commands.splice(kitIndex, 1);
+                    commands.splice(kitIndex, 1); // Borrar el kit del array
                     localStorage.setItem('commands', JSON.stringify(commands));
                     displayCommands();
+                    updateInventory(); // Actualizar el inventario después de eliminar
                 }
             }
         }
@@ -495,10 +516,11 @@
             }
         };
 
+        // Cargar los ítems en la lista del dropdown según la categoría seleccionada
         function updateItemList() {
             const category = document.getElementById('item_category').value;
             const itemList = document.getElementById('item_list');
-            itemList.innerHTML = '<option value="none">Seleccione un ítem</option>';
+            itemList.innerHTML = '<option value="none">Seleccione un ítem</option>'; // Reiniciar lista de ítems
 
             if (category !== 'none') {
                 items[category].forEach(item => {
@@ -508,6 +530,50 @@
                     itemList.appendChild(option);
                 });
             }
+        }
+
+        // Función para actualizar el inventario en tiempo real
+        function updateInventory() {
+            const wearSlots = document.getElementById('wear_slots');
+            const mainSlots = document.getElementById('main_slots');
+            const beltSlots = document.getElementById('belt_slots');
+
+            // Limpiar los slots antes de mostrar
+            wearSlots.innerHTML = '';
+            mainSlots.innerHTML = '';
+            beltSlots.innerHTML = '';
+
+            // Procesar los comandos generados
+            commands.forEach(kit => {
+                kit.commands.forEach(command => {
+                    const parts = command.split('"');
+                    const itemId = parts[1].trim();
+                    const location = parts[3].trim();
+                    const quantity = parts[2].trim();
+
+                    const slot = document.createElement('div');
+                    slot.className = 'slot';
+                    const img = document.createElement('img');
+                    img.src = `images/${itemId}.png`; // Cambiar a la ruta correcta
+                    img.alt = itemId;
+
+                    const quantityLabel = document.createElement('div');
+                    quantityLabel.className = 'quantity';
+                    quantityLabel.innerText = `x${quantity}`; // Mostrar cantidad
+
+                    slot.appendChild(img);
+                    slot.appendChild(quantityLabel);
+
+                    // Asignar slots según la ubicación
+                    if (location === 'Wear') {
+                        wearSlots.appendChild(slot);
+                    } else if (location === 'Main') {
+                        mainSlots.appendChild(slot);
+                    } else if (location === 'Belt') {
+                        beltSlots.appendChild(slot);
+                    }
+                });
+            });
         }
     </script>
     <footer>
