--- a/Index.html
+++ b/Index.html
@@ -80,16 +80,39 @@
             margin-top: 40px;
         }
 
+        /* Estilo para los botones de sección */
+        .section-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+
+        /* Estilo para la imagen del ítem */
+        .item-image {
+            max-width: 100px;
+            margin: 10px 0;
+        }
+
         /* Estilo para el inventario simulado */
         #inventory {
-            display: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             margin-top: 20px;
         }
 
         .slots {
             display: flex;
-            flex-wrap: wrap;
-            margin: 10px 0;
+            flex-direction: column;
+            width: 400px; /* Ajustar el ancho según sea necesario */
+            margin-bottom: 10px;
+        }
+
+        .slot-row {
+            display: flex;
+            justify-content: space-between; /* Espacio uniforme entre los slots */
+            margin: 5px 0; /* Espaciado entre filas */
         }
 
         .slot {
@@ -101,8 +124,8 @@
             border-radius: 5px;
             position: relative; /* Posición relativa para los elementos internos */
             display: flex;
-            align-items: center;
-            justify-content: center;
+            align-items: center; /* Centrar verticalmente el contenido */
+            justify-content: center; /* Centrar horizontalmente el contenido */
         }
 
         .slot img {
@@ -160,7 +183,7 @@
         <option value="freekit">freekit</option>
         <option value="freekit2">freekit2</option>
         <option value="vipkit">vipkit</option>
-        <option value="elitekit1">elitekit</option>
+        <option value="elitekit1">elitekit1</option>
         <option value="elitekit2">elitekit2</option>
         <option value="elitekit3">elitekit3</option>
         <option value="elitekit4">elitekit4</option>
@@ -199,21 +222,17 @@
     <div id="kit_list"></div>
     <div id="command_list"></div>
     
-    <div id="inventory">
+    <div id="inventory" style="display:none;">
         <h3>Simulated Inventory</h3>
-        <div id="wear_section">
+        <div class="slots">
             <h4>Wear</h4>
-            <div id="wear_slots" class="slots"></div>
-        </div>
-        <div id="main_section">
+            <div id="wear_slots" class="slots slot-row"></div>
             <h4>Main</h4>
-            <div id="main_slots" class="slots"></div>
-        </div>
-        <div id="belt_section">
+            <div id="main_slots" class="slots slot-row"></div>
             <h4>Belt</h4>
-            <div id="belt_slots" class="slots"></div>
+            <div id="belt_slots" class="slots slot-row"></div>
         </div>
-        <button onclick="hideInventory()">Hide</button>
+        <button onclick="hideInventory()">Hide Inventory</button>
     </div>
 
     <script src="Items.js"></script>
@@ -337,8 +356,8 @@
                 kit.commands.forEach(command => {
                     const parts = command.split('"');
                     const itemId = parts[1].trim();
+                    const quantity = parts[2].trim();
                     const location = parts[3].trim();
-                    const quantity = parseInt(parts[2].trim(), 10);
 
                     const slot = document.createElement('div');
                     slot.className = 'slot';
@@ -375,7 +394,7 @@
             const kit = predefinedKits.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('\n'); // Asegurarse de que esté separado por líneas
+                tempInput.value = kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n'); // Asegurarse de que esté separado por líneas
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
@@ -427,6 +446,36 @@
             displayCommands();
             document.getElementById('item_list').value = 'none'; // Reiniciar la selección de ítems
             showItemDetails(); // Limpiar detalles de ítem
+            updateInventory(command); // Actualizar inventario en tiempo real
+        }
+
+        function updateInventory(command) {
+            const parts = command.split('"');
+            const itemId = parts[1].trim();
+            const quantity = parts[2].trim();
+            const location = parts[3].trim();
+
+            const slot = document.createElement('div');
+            slot.className = 'slot';
+            const img = document.createElement('img');
+            img.src = `images/${itemId}.png`; // Cambiar a la ruta correcta
+            img.alt = itemId;
+
+            const quantityLabel = document.createElement('div');
+            quantityLabel.className = 'quantity';
+            quantityLabel.innerText = `x${quantity}`; // Mostrar cantidad
+
+            slot.appendChild(img);
+            slot.appendChild(quantityLabel);
+
+            // Asignar slots según la ubicación
+            if (location === 'Wear') {
+                document.getElementById('wear_slots').appendChild(slot);
+            } else if (location === 'Main') {
+                document.getElementById('main_slots').appendChild(slot);
+            } else if (location === 'Belt') {
+                document.getElementById('belt_slots').appendChild(slot);
+            }
         }
 
         function displayCommands() {
@@ -457,12 +506,12 @@
             const kit = commands.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('\n');
+                tempInput.value = kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n'); // Asegurarse de que esté separado por líneas
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n')); // Espacios en el mensaje de alerta
+                alert('Commands copied: ' + kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n')); // Mensaje de confirmación
             }
         }
 
@@ -489,6 +538,11 @@
             }
         }
 
+        function hideInventory() {
+            const inventory = document.getElementById('inventory');
+            inventory.style.display = 'none'; // Ocultar inventario
+        }
+
         window.onload = function() {
             const savedCommands = localStorage.getItem('commands');
             if (savedCommands) {
@@ -512,14 +566,9 @@
                 });
             }
         }
-
-        function hideInventory() {
-            const inventory = document.getElementById('inventory');
-            inventory.style.display = 'none'; // Ocultar el inventario
-        }
     </script>
     <footer>
-        <p>Made by VieraGuti</p>
+        <p>Hecho por VieraGuti</p>
     </footer>
 </body>
 </html>
