--- a/Index.html
+++ b/Index.html
@@ -104,15 +104,9 @@
 
         .slots {
             display: flex;
-            flex-direction: column;
+            flex-wrap: wrap;
             width: 400px; /* Ajustar el ancho según sea necesario */
             margin-bottom: 10px;
-        }
-
-        .slot-row {
-            display: flex;
-            justify-content: space-between; /* Espacio uniforme entre los slots */
-            margin: 5px 0; /* Espaciado entre filas */
         }
 
         .slot {
@@ -123,9 +117,6 @@
             border: 2px solid #FF4500; /* Borde de los slots */
             border-radius: 5px;
             position: relative; /* Posición relativa para los elementos internos */
-            display: flex;
-            align-items: center; /* Centrar verticalmente el contenido */
-            justify-content: center; /* Centrar horizontalmente el contenido */
         }
 
         .slot img {
@@ -183,7 +174,7 @@
         <option value="freekit">freekit</option>
         <option value="freekit2">freekit2</option>
         <option value="vipkit">vipkit</option>
-        <option value="elitekit1">elitekit1</option>
+        <option value="elitekit1">elitekit</option>
         <option value="elitekit2">elitekit2</option>
         <option value="elitekit3">elitekit3</option>
         <option value="elitekit4">elitekit4</option>
@@ -221,18 +212,18 @@
     
     <div id="kit_list"></div>
     <div id="command_list"></div>
-    
+
     <div id="inventory" style="display:none;">
         <h3>Simulated Inventory</h3>
         <div class="slots">
             <h4>Wear</h4>
-            <div id="wear_slots" class="slots slot-row"></div>
+            <div id="wear_slots" class="slots"></div>
             <h4>Main</h4>
-            <div id="main_slots" class="slots slot-row"></div>
+            <div id="main_slots" class="slots"></div>
             <h4>Belt</h4>
-            <div id="belt_slots" class="slots slot-row"></div>
+            <div id="belt_slots" class="slots"></div>
         </div>
-        <button onclick="hideInventory()">Hide Inventory</button>
+        <button onclick="toggleInventory()">Hide Inventory</button>
     </div>
 
     <script src="Items.js"></script>
@@ -356,7 +347,7 @@
                 kit.commands.forEach(command => {
                     const parts = command.split('"');
                     const itemId = parts[1].trim();
-                    const quantity = parts[2].trim();
+                    const quantity = parseInt(parts[2].trim(), 10);
                     const location = parts[3].trim();
 
                     const slot = document.createElement('div');
@@ -384,6 +375,16 @@
             }
         }
 
+        // Función para ocultar el inventario
+        function toggleInventory() {
+            const inventory = document.getElementById('inventory');
+            if (inventory.style.display === 'none') {
+                inventory.style.display = 'block';
+            } else {
+                inventory.style.display = 'none';
+            }
+        }
+
         // Función para ocultar la lista
         function toggleKitList() {
             toggleKits(); // Mostrar solo la lista de nombres
@@ -394,12 +395,12 @@
             const kit = predefinedKits.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n'); // Asegurarse de que esté separado por líneas
+                tempInput.value = kit.commands.join('\n');
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n')); // Mensaje de confirmación
+                alert('Commands copied: ' + kit.commands.join('\n')); // Mensaje de confirmación
             }
         }
 
@@ -446,36 +447,6 @@
             displayCommands();
             document.getElementById('item_list').value = 'none'; // Reiniciar la selección de ítems
             showItemDetails(); // Limpiar detalles de ítem
-            updateInventory(command); // Actualizar inventario en tiempo real
-        }
-
-        function updateInventory(command) {
-            const parts = command.split('"');
-            const itemId = parts[1].trim();
-            const quantity = parts[2].trim();
-            const location = parts[3].trim();
-
-            const slot = document.createElement('div');
-            slot.className = 'slot';
-            const img = document.createElement('img');
-            img.src = `images/${itemId}.png`; // Cambiar a la ruta correcta
-            img.alt = itemId;
-
-            const quantityLabel = document.createElement('div');
-            quantityLabel.className = 'quantity';
-            quantityLabel.innerText = `x${quantity}`; // Mostrar cantidad
-
-            slot.appendChild(img);
-            slot.appendChild(quantityLabel);
-
-            // Asignar slots según la ubicación
-            if (location === 'Wear') {
-                document.getElementById('wear_slots').appendChild(slot);
-            } else if (location === 'Main') {
-                document.getElementById('main_slots').appendChild(slot);
-            } else if (location === 'Belt') {
-                document.getElementById('belt_slots').appendChild(slot);
-            }
         }
 
         function displayCommands() {
@@ -506,12 +477,12 @@
             const kit = commands.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n'); // Asegurarse de que esté separado por líneas
+                tempInput.value = kit.commands.join('\n');
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n')); // Mensaje de confirmación
+                alert('Commands copied: ' + kit.commands.join('\n')); // Espacios en el mensaje de alerta
             }
         }
 
@@ -536,11 +507,6 @@
                     displayCommands();
                 }
             }
-        }
-
-        function hideInventory() {
-            const inventory = document.getElementById('inventory');
-            inventory.style.display = 'none'; // Ocultar inventario
         }
 
         window.onload = function() {
