--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>Kits Generator Rust</title>
     <style>
         body {
-            font-family: Arial, sans-serif; /* Cambiar a Arial */
+            font-family: 'Arial', sans-serif; /* Cambiar fuente a Arial */
             background-color: #1e1e1e; /* Fondo oscuro */
             color: #fff; /* Texto claro */
             margin: 0;
@@ -47,7 +47,7 @@
             background-color: #E53E00; /* Hover más oscuro */
         }
 
-        #command_list, #kit_list {
+        #command_list, #kit_list, #inventory {
             margin-top: 20px;
             padding: 10px;
             background-color: #292929; /* Cuadro oscuro */
@@ -79,22 +79,7 @@
             margin-top: 40px;
         }
 
-        /* Estilo para los botones de sección */
-        .section-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
-        }
-
-        /* Estilo para el inventario simulado */
-        #inventory {
-            display: none; /* Ocultar inicialmente */
-            flex-direction: column;
-            align-items: center;
-            margin-top: 20px;
-        }
-
+        /* Estilo para los slots */
         .slots {
             display: flex;
             flex-wrap: wrap;
@@ -111,9 +96,9 @@
             border: 2px solid #FF4500; /* Borde de los slots */
             border-radius: 5px;
             position: relative; /* Posición relativa para los elementos internos */
-            display: flex; /* Hacer que los slots sean flexibles */
-            align-items: center; /* Centrar verticalmente el contenido */
-            justify-content: center; /* Centrar horizontalmente el contenido */
+            display: flex;
+            align-items: center;
+            justify-content: center; /* Centrar la imagen y cantidad */
         }
 
         .slot img {
@@ -210,15 +195,19 @@
     <div id="kit_list"></div>
     <div id="command_list"></div>
     
-    <div id="inventory">
+    <div id="inventory" style="display:none;">
         <h3>Simulated Inventory</h3>
-        <div class="slots">
-            <h4>Wear</h4>
-            <div id="wear_slots" class="slots"></div>
-            <h4>Main</h4>
-            <div id="main_slots" class="slots"></div>
-            <h4>Belt</h4>
-            <div id="belt_slots" class="slots"></div>
+        <div>
+            <strong>Wear:</strong>
+            <div class="slots" id="wear_slots"></div>
+        </div>
+        <div>
+            <strong>Main:</strong>
+            <div class="slots" id="main_slots"></div>
+        </div>
+        <div>
+            <strong>Belt:</strong>
+            <div class="slots" id="belt_slots"></div>
         </div>
         <button onclick="hideInventory()">Hide Inventory</button>
     </div>
@@ -375,19 +364,7 @@
         // Función para ocultar el inventario
         function hideInventory() {
             const inventory = document.getElementById('inventory');
-            inventory.style.display = 'none'; // Ocultar inventario
-            clearInventory(); // Limpiar el inventario
-        }
-
-        // Función para limpiar el inventario
-        function clearInventory() {
-            const wearSlots = document.getElementById('wear_slots');
-            const mainSlots = document.getElementById('main_slots');
-            const beltSlots = document.getElementById('belt_slots');
-
-            wearSlots.innerHTML = '';
-            mainSlots.innerHTML = '';
-            beltSlots.innerHTML = '';
+            inventory.style.display = 'none';
         }
 
         // Función para ocultar la lista
@@ -400,12 +377,12 @@
             const kit = predefinedKits.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('\n');
+                tempInput.value = kit.commands.join('<br>'); // Asegurarse de que esté separado por líneas
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('\n')); // Mensaje de confirmación
+                alert('Commands copied: ' + kit.commands.join('<br>').replace(/Kit add/g, 'Kit add<br>')); // Mensaje de confirmación
             }
         }
 
@@ -464,7 +441,7 @@
                 kitItem.innerHTML = `
                     <strong>${kit.name}</strong>
                     <div>
-                        ${kit.commands.join('<br>')}
+                        ${kit.commands.join('<br>').replace(/Kit add/g, 'Kit add<br>')} <!-- Espacios en el mensaje de alerta -->
                     </div>
                     <div class="kit-actions">
                         <button onclick="copyCommands('${kit.name}')">Copy</button>
@@ -482,12 +459,12 @@
             const kit = commands.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('\n');
+                tempInput.value = kit.commands.join('<br>');
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n')); // Espacios en el mensaje de alerta
+                alert('Commands copied: ' + kit.commands.join('<br>')); // Mensaje de confirmación
             }
         }
 
