--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kits Generator Rust</title>
+    <link href="https://fonts.googleapis.com/css2?family=Arial&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif; /* Cambiar fuente a Arial */
+            font-family: 'Arial', sans-serif; /* Cambiar la fuente a Arial */
             background-color: #1e1e1e; /* Fondo oscuro */
             color: #fff; /* Texto claro */
             margin: 0;
@@ -47,7 +48,7 @@
             background-color: #E53E00; /* Hover más oscuro */
         }
 
-        #command_list, #kit_list, #inventory {
+        #command_list, #kit_list {
             margin-top: 20px;
             padding: 10px;
             background-color: #292929; /* Cuadro oscuro */
@@ -79,13 +80,30 @@
             margin-top: 40px;
         }
 
-        /* Estilo para los slots */
+        /* Estilo para los botones de sección */
+        .section-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+
+        /* Estilo para la imagen del ítem */
+        .item-image {
+            max-width: 100px;
+            margin: 10px 0;
+        }
+
+        /* Estilo para el inventario simulado */
+        #inventory {
+            display: none; /* Ocultar inicialmente */
+            margin-top: 20px;
+        }
+
         .slots {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center; /* Centrar los slots */
-            width: 400px; /* Ajustar el ancho según sea necesario */
-            margin-bottom: 10px;
+            margin: 10px 0;
         }
 
         .slot {
@@ -96,9 +114,6 @@
             border: 2px solid #FF4500; /* Borde de los slots */
             border-radius: 5px;
             position: relative; /* Posición relativa para los elementos internos */
-            display: flex;
-            align-items: center;
-            justify-content: center; /* Centrar la imagen y cantidad */
         }
 
         .slot img {
@@ -172,7 +187,7 @@
         <option value="elitekit14">elitekit14</option>
         <option value="elitekit15">elitekit15</option>
         <option value="elitekit16">elitekit16</option>
-        <option value="elitekit17">elitekit17</option>
+        option value="elitekit17">elitekit17</option>
         <option value="elitekit18">elitekit18</option>
         <option value="elitekit19">elitekit19</option>
         <option value="elitekit20">elitekit20</option>
@@ -194,20 +209,20 @@
     
     <div id="kit_list"></div>
     <div id="command_list"></div>
-    
-    <div id="inventory" style="display:none;">
+
+    <div id="inventory">
         <h3>Simulated Inventory</h3>
-        <div>
-            <strong>Wear:</strong>
-            <div class="slots" id="wear_slots"></div>
+        <div class="slots">
+            <h4>Wear:</h4>
+            <div id="wear_slots" class="slots"></div>
         </div>
-        <div>
-            <strong>Main:</strong>
-            <div class="slots" id="main_slots"></div>
+        <div class="slots">
+            <h4>Main:</h4>
+            <div id="main_slots" class="slots"></div>
         </div>
-        <div>
-            <strong>Belt:</strong>
-            <div class="slots" id="belt_slots"></div>
+        <div class="slots">
+            <h4>Belt:</h4>
+            <div id="belt_slots" class="slots"></div>
         </div>
         <button onclick="hideInventory()">Hide Inventory</button>
     </div>
@@ -361,12 +376,6 @@
             }
         }
 
-        // Función para ocultar el inventario
-        function hideInventory() {
-            const inventory = document.getElementById('inventory');
-            inventory.style.display = 'none';
-        }
-
         // Función para ocultar la lista
         function toggleKitList() {
             toggleKits(); // Mostrar solo la lista de nombres
@@ -377,12 +386,12 @@
             const kit = predefinedKits.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('<br>'); // Asegurarse de que esté separado por líneas
+                tempInput.value = kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n'); // Asegurarse de que esté separado por líneas
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('<br>').replace(/Kit add/g, 'Kit add<br>')); // Mensaje de confirmación
+                alert('Commands copied: \n' + kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n')); // Mensaje de confirmación
             }
         }
 
@@ -441,7 +450,7 @@
                 kitItem.innerHTML = `
                     <strong>${kit.name}</strong>
                     <div>
-                        ${kit.commands.join('<br>').replace(/Kit add/g, 'Kit add<br>')} <!-- Espacios en el mensaje de alerta -->
+                        ${kit.commands.join('<br>').replace(/Kit add/g, 'Kit add<br>')}
                     </div>
                     <div class="kit-actions">
                         <button onclick="copyCommands('${kit.name}')">Copy</button>
@@ -459,12 +468,12 @@
             const kit = commands.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('<br>');
+                tempInput.value = kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n'); // Asegurarse de que esté separado por líneas
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('<br>')); // Mensaje de confirmación
+                alert('Commands copied: ' + kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n')); // Espacios en el mensaje de alerta
             }
         }
 
@@ -489,6 +498,10 @@
                     displayCommands();
                 }
             }
+        }
+
+        function hideInventory() {
+            document.getElementById('inventory').style.display = 'none'; // Ocultar inventario
         }
 
         window.onload = function() {
@@ -520,3 +533,4 @@
     </footer>
 </body>
 </html>
+
